tests/snapshots/integration__integration_tests__list__unicode_commit_message.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpKeJUhV/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[2mBranch      [0m  [2mAge          [0m  [2mCommit  [0m  [2mMessage                [0m  [2mPath[0m
[1m[35mmain        [0m  [2m10 months ago[0m  [1m[35me4614cb7[0m  [2mFix bug with café...[0m     [1m[35m./test-repo[0m
feature-test  [2m10 months ago[0m  [2m0c53695b[0m  [2mAdd support for...[0m       ./feature-test

[2mShowing 2 worktrees, 1 behind[0m

----- stderr -----
