tests/snapshots/integration__integration_tests__list__with_user_marker.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m       [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m                [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage
@ [1mmain[0m             [2m^[22m                         [1m./repo[0m                       [2ma058e792[0m  [2m1d[0m    [2mInitial commit
+ feature-api      [2m↑[22m 🤖              [32m↑1[0m      ./repo.feature-api           [2m95e48b49[0m  [2m1d[0m    [2mAdd REST API endpoints
+ review-ui      [36m?[39m [2m↑[22m 💬              [32m↑1[0m      ./repo.review-ui             [2m46b6a187[0m  [2m1d[0m    [2mAdd dashboard component
+ wip-docs       [36m?[39m [2m–[22m                         ./repo.wip-docs              [2ma058e792[0m  [2m1d[0m    [2mInitial commit

⚪ [2mShowing 4 worktrees, 2 ahead
